# OpenVINO-CVDeploy

yolov10/: CMakeLists.txt  ReadMe.md  yolov10-det-save-txt.cpp  yolov10-det.cpp
yolov10/engine/: yolov10.cpp  yolov10.h
yolov10/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
yolov10/utils/: config.h  types.h  utils.cpp  utils.h
yolov5/: CMakeLists.txt  README.md  yolov5-det.cpp  yolov5-seg.cpp  yolov5_det_save_txt.cpp
yolov5/engine/: yolov5.cpp  yolov5.h  yolov5_seg.cpp  yolov5_seg.h
yolov5/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
yolov5/utils/: config.h  utils.cpp  utils.h
yolov8/: CMakeLists.txt  ReadMe.md  yolov8-det.cpp  yolov8-obb.cpp  yolov8-pose.cpp  yolov8-seg.cpp  yolov8_det_save_txt.cpp
yolov8/engine/: yolov8.cpp  yolov8.h  yolov8_obb.cpp  yolov8_obb.h  yolov8_pose.cpp  yolov8_pose.h  yolov8_seg.cpp  yolov8_seg.h
yolov8/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
yolov8/utils/: config.h  types.h  utils.cpp  utils.h
